<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4e9b3"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoReceita"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/logo_receitas"
        android:contentDescription="@string/logo_receita" />

    <EditText
        android:id="@+id/nomeReceita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/adlam_display"
        android:gravity="center"
        android:hint="@string/hint_nome_receita"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#D3D3D3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagemReceita"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#EEEEEE"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagem_da_receita" />

        <Button
            android:id="@+id/botaoUploadImagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#9A793104"
            android:fontFamily="@font/adlam_display"
            android:minHeight="48dp"
            android:onClick="carregarImagem"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/botao_carregar_imagem"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ingredientesReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/texto_ingredientes"
        android:textColor="#793104"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutIngredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/botaoAdicionarIngrediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#9A793104"
        android:fontFamily="@font/adlam_display"
        android:minHeight="48dp"
        android:onClick="adicionarIngrediente"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="+ Ingrediente"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/preparoReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/texto_modo_preparo"
        android:textColor="#793104"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/modoPreparoReceita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/input_background"
        android:fontFamily="@font/adlam_display"
        android:gravity="top|center"
        android:hint="@string/hint_modo_preparo"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#D3D3D3"
        android:textSize="16sp" />

    <Button
        android:id="@+id/botaoSalvarReceita"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#591707"
        android:fontFamily="@font/adlam_display"
        android:minHeight="48dp"
        android:onClick="salvarReceita"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/botao_salvar"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Button
    android:id="@+id/buttonSalvarEditarReceita"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:minHeight="48dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:text="@string/botao_salvar_receita"
    android:visibility="gone" />

</LinearLayout>